--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </li>
             </ul>
         </div>
-        <div id="pantera">
+        <div id="pantera" class="rellax" data-rellax-speed="7">
             <p>Pantera bla</p>
         </div>
     </div>
@@ -167,6 +167,7 @@
     <!-- ============ libreries js  ============ -->
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="lib/jquery.fancybox.min.js"></script>
+    <script src="lib/rellax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
